@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2016-2023  Hybird
+#    Copyright (C) 2016-2024  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -96,6 +96,9 @@ class JobEdition(generic.CremeModelEditionPopup):
         if instance.user_id is not None:
             raise ConflictError('A non-system job cannot be edited')
 
+        if not instance.type.configurable:
+            raise ConflictError('This type of job cannot be edited (not configurable)')
+
     def get_form_class(self):
         config_form = self.object.get_config_form_class()
         if config_form is None:
@@ -119,6 +122,9 @@ class JobEnabling(generic.CheckedView):
 
         if job.user_id is not None:
             raise ConflictError('A non-system job cannot be disabled')
+
+        if not job.type.configurable:
+            raise ConflictError('This type of job cannot be disabled (not configurable)')
 
         job.enabled = kwargs.get(self.enabled_arg, self.enabled_default)
         job.save()
